# sourmash_plugin_hashannot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-test.yml
src/: sourmash_plugin_hashannot.py
tests/: test_sourmash_plugin.py
tests/test-data/: shew-47.500k.gff  shew-63.500k.gff
